--- a/magic/Makefile.am
+++ b/magic/Makefile.am
@@ -1,5 +1,5 @@
 #
-# $File: Makefile.am,v 1.68 2011/08/03 16:26:52 christos Exp $
+# $File: Makefile.am,v 1.69 2011/08/03 16:28:23 christos Exp $
 #
 MAGIC_FRAGMENT_BASE = Magdir
 MAGIC_DIR = $(top_srcdir)/magic
@@ -258,7 +258,7 @@ ${MAGIC}: $(EXTRA_DIST) $(FILE_COMPILE_DEP)
 	    : \
 	  else \
 	    v=$$(file --version | sed -e s/file-// -e q); \
-	    if [ $$v != ${PACKAGE_VERSION} ]; then \
+	    if [ "$$v" != "${PACKAGE_VERSION}" ]; then \
 		echo "Cannot use the installed version of file ($$v) to"; \
 		echo "cross-compile file ${PACKAGE_VERSION}"; \
 		echo "Please install file ${PACKAGE_VERSION} locally first"; \
