--- a/src/Makefile.std
+++ b/src/Makefile.std
@@ -1,6 +1,6 @@
 # Makefile for file(1) cmd. 
 # Copyright (c) Ian F. Darwin 86/09/01 - see LEGAL.NOTICE.
-# @(#)$Id: Makefile.std,v 1.17 2003/02/27 20:47:45 christos Exp $
+# @(#)$Id: Makefile.std,v 1.18 2011/12/30 16:51:19 christos Exp $
 #
 # This software is not subject to any license of the American Telephone
 # and Telegraph Company or of the Regents of the University of California.
@@ -76,7 +76,7 @@ SRCS = file.c apprentice.c fsmagic.c softmagic.c ascmagic.c \
 OBJS = file.o apprentice.o fsmagic.o softmagic.o ascmagic.o \
 	compress.o is_tar.o readelf.o \
 	print.o $(LOCALOBJS)
-HDRS = file.h names.h patchlevel.h readelf.h tar.h
+HDRS = file.h readelf.h tar.h
 
 AUTOSRC=configure configure.in install-sh config.h.in Makefile.in
 ALLSRC = LEGAL.NOTICE README MAINT PORTING $(SRCS) $(HDRS) \
