--- a/src/magic.h.in
+++ b/src/magic.h.in
@@ -74,6 +74,8 @@
 #define	MAGIC_NO_CHECK_FORTRAN	0x000000 /* Don't check ascii/fortran */
 #define	MAGIC_NO_CHECK_TROFF	0x000000 /* Don't check ascii/troff */
 
+#define MAGIC_VERSION		X.YY	/* This implementation */
+
 
 #ifdef __cplusplus
 extern "C" {
@@ -91,6 +93,7 @@ const char *magic_buffer(magic_t, const void *, size_t);
 const char *magic_error(magic_t);
 int magic_setflags(magic_t, int);
 
+int magic_version(void);
 int magic_load(magic_t, const char *);
 int magic_compile(magic_t, const char *);
 int magic_check(magic_t, const char *);
