--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -22,6 +22,7 @@ libmagic_la_LIBADD = $(LTLIBOBJS) $(MINGWLIBS)
 file_SOURCES = file.c
 file_LDADD = libmagic.la
 CLEANFILES = magic.h
+HDR= $(top_srcdir)/src/magic.h.in
 
-magic.h:	$(top_srcdir)/src/magic.h.in
-	sed -e "s/X.YY/$$(echo @VERSION@ | tr -d .)/" < $> > $@
+magic.h:	${HDR}
+	sed -e "s/X.YY/$$(echo @VERSION@ | tr -d .)/" < ${HDR} > $@
