use BUILT_SOURCES

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -23,6 +23,7 @@ file_SOURCES = file.c
 file_LDADD = libmagic.la
 CLEANFILES = magic.h
 HDR= $(top_srcdir)/src/magic.h.in
+BUILT_SOURCES = magic.h
 
 magic.h:	${HDR}
 	sed -e "s/X.YY/$$(echo @VERSION@ | tr -d .)/" < ${HDR} > $@
