--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ compiler:
  - clang
 before_install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq automake autoconf libtool make zlib1g-dev python
+ - sudo apt-get install -qq automake autotools-dev make libtool python zlib1g-dev
 script:
  - autoreconf -f -i
  - ./configure --disable-silent-rules
