--- a/src/magic.h.in
+++ b/src/magic.h.in
@@ -103,11 +103,10 @@ int magic_check(magic_t, const char *);
 int magic_list(magic_t, const char *);
 int magic_errno(magic_t);
 
-#define MAGIC_PARAM_INDIR_RECURSION	0
-#define MAGIC_PARAM_NAME_RECURSION	1
-#define MAGIC_PARAM_NAME_MAX		2
-#define MAGIC_PARAM_PHNUM_MAX		3
-#define MAGIC_PARAM_SHNUM_MAX		4
+#define MAGIC_PARAM_INDIR_MAX		0
+#define MAGIC_PARAM_NAME_MAX		1
+#define MAGIC_PARAM_ELF_PHNUM_MAX	2
+#define MAGIC_PARAM_ELF_SHNUM_MAX	3
 
 int magic_setparam(magic_t, int, const void *);
 int magic_getparam(magic_t, int, void *);
